app/styles/main.scss
@import './global.scss';
@import './fontello.scss';
@import './md.scss';
@import './cover.scss';
@import '../contents/about.scss';
@import './mobile.scss';

@include scrollbars(.5em, rgba(112, 128, 144, 0.26), rgba(184, 192, 200, 0.5));

.info-tab{
  @include info-tab-width-control;
  height: 100%;
  background-color: $darken-bg-color;

}

.info-tab-content{
  padding: 0 20px;
  padding-top: $header-height + 120px;
  color: lighten($base-gray, 80%);
  height: 100%;
  box-sizing: border-box;

  .intro{
    text-align: center;
  }
  a{
    color: darken($main-color, 10%);
  }

  &.animate{
    animation: display-content 1s ease forwards;
  }

  @keyframes display-content{
    0%{
      display: none;
      opacity: 0;
    }

    70%{
      display: block;
      opacity: 0;
    }

    100%{
      opacity: 1;
    }
  }
}

.hint-word{
  display: none;
}

.info-tab-header{
  @include info-tab-width-control;
  font-weight: bold;
  position: fixed;
  color: $base-gray;
  z-index: 2;
  background: linear-gradient($support-color, $main-color);
  //transition: 0.1s all cubic-bezier(0.4, 0, 0.2, 1);

  // @media only screen and (max-device-width: 450px), only screen and (max-width: 450px){
  //   &{
  //     width: 100%;
  //   }
  // }

  // @media only screen and (max-device-width: 370px), only screen and (max-width: 370px){
  //   &.info-tab-header{
  //     height: $header-height * 1.3;
  //   }
  //   & .info-tab-content{
  //     padding-top: $header-height * 1.3 + 110px;
  //   }
  // }
  &.animate{
    // width: $info-tab-width;
    // max-width: $tab-max-size;
    // height: $header-height;
    //transform: translateZ(0);
    will-change: width height;
    animation: enter-in 1s ease forwards;
  }

  @keyframes enter-in{
    0%{
      max-width: 5000px;
      width: 100%;
      height: 100%;
    }
    60%{
      max-width: $tab-max-size;
      width: $info-tab-width;
      height: 100%;
    }
    99%{
      max-width: $tab-max-size;
      width: $info-tab-width;
      height: $header-height;
    }

    100%{
      max-width: $tab-max-size;
      width: $info-tab-width;
      height: $header-height;
      filter: drop-shadow(-5px 5px 7px rgba(0,0,0,.5));
    }
  }

  &:before{
    content: "";
    position: absolute;
    top: 100%;
    right: 0;
    width: 100%;
    height: 90px;
    background: linear-gradient(to right bottom, $main-color 50%, transparent 50%);
  }
  .name-box-wrapper{
    @include info-tab-width-control;
    position: fixed;
  }
  .name-box{
    //@include horizontal-center;
    margin: 0 auto;
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;

    h1{
      @include title-font;
      font-weight: bold;
      margin-top: $bg-avatar-size + 30px;
      padding-top: 30px;
    }

    h3{
      @include title-font;
      font-weight: normal;
      white-space: nowrap;
    }
  }

  .avatar-container{
    @include horizontal-center;
    top: 30px;
    width: $bg-avatar-size;
    height: $bg-avatar-size;
    background-image: url('../images/avatar.jpg');
    background-size: cover;
    border-radius: $bg-avatar-size;

    .avatar{
      @include content-center;
      z-index: 2;
      width: $bg-avater-inner-size;
      height: $bg-avater-inner-size;
      background-image: url('../images/avatar.jpg');
      background-size: $bg-avatar-size / $bg-avater-inner-size * 100%;
      background-position: center;
      border-radius: $bg-avater-inner-size;
      border: ($bg-avatar-size - $bg-avater-inner-size) * 0.25 solid $main-color;
      box-sizing: content-box;

      &:hover{
        transition: border-width 0.3s ease;
        //border-width: ($bg-avatar-size - $bg-avater-inner-size) * 0.55;
        background-image: url('../images/avatar-open.jpg');
      }
    }

    &:hover{
      transition: background-image 0.5s ease;
      background-image: url('../images/avatar-open.jpg');
    }
  }
}

